--- a/Project/app/src/main/res/values/strings.xml
+++ b/Project/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="six_dice">6 Dice</string>
     <string name="default_numerical">Default Number of Numerical Dice</string>
     <string name="alphabetical_category">Letters Included in Alphabet Dice</string>
+    <string name="ad_id">ca-app-pub-5863280765051652/3100110051</string>
 </resources>
